deploy/svc-blog.yaml
apiVersion: v1
kind: Service

metadata:
  name: svc-blog    # service name

spec:
  type: ClusterIP # service type. ClusterIP means the service exposes a virtual IP within the k8s cluster, used to access the service internally. This IP stays fixed regardless of which node the pods run on
  ports:
    - name: http
      port: 5678    # port used for external access
      targetPort: 5678    # port used by the application code
      protocol: TCP
  selector: # which pods this service matches
    app: blog # pod label to match


# kubectl get pod -o wide
# Delete a pod - another pod will replace
# kubectl delete pod <pod-name>
# kubectl get pod -o wide

# Apply the service to cluster
# kubectl apply -f deploy/svc-blog.yaml

# Get Service
# kubectl get svc

# Curl the service
# docker exec fl-control-plane curl <svc-ip>:5678/?name=fl

# Service as a fixed ip and load balancer
