deploy/svc-lottery.yaml
apiVersion: v1
kind: Service

metadata:
  name: svc-lottery    # name of the service

spec:
  type: ClusterIP # service type. ClusterIP means the service exposes a virtual IP within the k8s cluster, used to access the service internally
  ports:
    - name: http
      port: 5679
      targetPort: 5679
      protocol: TCP
  selector: # which pods this service matches
    app: lottery # specifies the pod label
