deploy/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /blog
        pathType: Prefix
        backend:
          service:
            name: svc-blog
            port:
              number: 5678      # the service's working port number
      - path: /lottery
        pathType: Prefix
        backend:
          service:
            name: svc-lottery
            port:
              number: 5679      # the service's working port number
